# ZeroVault

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE  README.md  app.env.vault  zerovault_demo.sh
cli/: Cargo.toml  README.md  sample.env.vault
cli/src/: commands.rs  main.rs  self_install.rs  tests.rs  types.rs  utils.rs  vault_integration.rs
crates/vault_core/: Cargo.toml  README.md
crates/vault_core/benches/: crypto_benchmarks.rs
crates/vault_core/src/: crypto.rs  lib.rs  memory.rs  types.rs
crates/vault_core/tests/: integration_tests.rs
crates/zerovault_explorer/: Cargo.toml  build.rs  zerovault.rc  zerovault_explorer.exe.manifest
crates/zerovault_explorer/src/: dialogs.rs  main.rs  operations.rs
crates/zerovault_explorer/src/explorer/: linux_explorer.rs  macos_explorer.rs  mod.rs
