[package]
name = "vault_core"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
hex = "0.4"
zeroize = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand_core = "0.6"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
